--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "azure-pipelines-task-lib": "^4.8.1",
+    "chalk": "^5.3.0",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
