--- a/buildandreleasetask/package.json
+++ b/buildandreleasetask/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.6.5",
     "azure-pipelines-task-lib": "^4.8.1",
     "chalk": "^5.3.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "ora": "^8.0.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.6",
